{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 38,
  "lineage": "b755af4c-5669-b080-51b9-42a3c44529bb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tfi-apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0ea68c435eb488d",
            "arn": "arn:aws:ec2:us-east-1:739691417784:instance/i-0e68de00401afe52a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e68de00401afe52a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00cbfbe7ac2d37560",
            "private_dns": "ip-10-0-0-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.121",
            "public_ip": "3.231.4.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078ad6f9fffda774f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5d2c88a050c1516",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033e64092709deea3"
            ]
          },
          "dependencies": [
            "aws_security_group.tfsg",
            "aws_subnet.tfsub",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tfigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739691417784:internet-gateway/igw-0ee7de19f2f3d46e3",
            "id": "igw-0ee7de19f2f3d46e3",
            "owner_id": "739691417784",
            "tags": {
              "Name": "mytfigw"
            },
            "tags_all": {
              "Name": "mytfigw"
            },
            "vpc_id": "vpc-0fdc33f96078ed5e2"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739691417784:route-table/rtb-0ffd6d9bfcedacecf",
            "id": "rtb-0ffd6d9bfcedacecf",
            "owner_id": "739691417784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee7de19f2f3d46e3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mytfrt"
            },
            "tags_all": {
              "Name": "mytfrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdc33f96078ed5e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfrt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0264dc5c25553201e",
            "route_table_id": "rtb-0ffd6d9bfcedacecf",
            "subnet_id": "subnet-0c5d2c88a050c1516"
          },
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_route_table.tfrt",
            "aws_subnet.tfsub",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739691417784:security-group/sg-033e64092709deea3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033e64092709deea3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230110201119425800000001",
            "name_prefix": "terraform-",
            "owner_id": "739691417784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mytfsg"
            },
            "tags_all": {
              "Name": "mytfsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdc33f96078ed5e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tfsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739691417784:subnet/subnet-0c5d2c88a050c1516",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5d2c88a050c1516",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739691417784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mytfsub"
            },
            "tags_all": {
              "Name": "mytfsub"
            },
            "vpc_id": "vpc-0fdc33f96078ed5e2"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739691417784:vpc/vpc-0fdc33f96078ed5e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9657a14fa8bf810",
            "default_route_table_id": "rtb-036d1f09dc66fe6a1",
            "default_security_group_id": "sg-01ace61e3822c364d",
            "dhcp_options_id": "dopt-08419bb8bd527a52f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fdc33f96078ed5e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036d1f09dc66fe6a1",
            "owner_id": "739691417784",
            "tags": {
              "Name": "mytfvpc"
            },
            "tags_all": {
              "Name": "mytfvpc"
            }
          }
        }
      ]
    }
  ]
}